--- a/empleados-boot/src/main/resources/application.properties
+++ b/empleados-boot/src/main/resources/application.properties
@@ -1,7 +1,12 @@
-spring.datasource.url=jdbc:mysql://localhost:3306/supuesto_empleado
-spring.datasource.username=root
-spring.datasource.password=root
-spring.jpa.hibernate.ddl-auto=update
-spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+#spring.datasource.url=jdbc:mysql://localhost:3306/supuesto_empleado
+#spring.datasource.username=root
+#spring.datasource.password=root
+#spring.jpa.hibernate.ddl-auto=update
+#spring.mvc.pathmatch.matching-strategy=ant-path-matcher
+
+#spring.data.mongodb.host=localhost
+#spring.data.mongodb.port=27017
+spring.data.mongodb.uri=mongodb+srv://localhost:27017
+spring.data.mongodb.database=supuesto_empleado
 
 spring.main.allow-circular-references=true
