--- a/empleados-jpa/pom.xml
+++ b/empleados-jpa/pom.xml
@@ -23,10 +23,13 @@
             <artifactId>empleados-domain</artifactId>
             <version>${project.version}</version>
         </dependency>
+
+<!--
         <dependency>
             <groupId>org.springframework.boot</groupId>
             <artifactId>spring-boot-starter-data-jpa</artifactId>
         </dependency>
+-->
 <!--
         <dependency>
             <groupId>com.h2database</groupId>
@@ -34,9 +37,16 @@
             <scope>runtime</scope>
         </dependency>
 -->
+<!--
         <dependency>
             <groupId>mysql</groupId>
             <artifactId>mysql-connector-java</artifactId>
         </dependency>
+-->
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-data-mongodb</artifactId>
+        </dependency>
+
     </dependencies>
 </project>
