--- a/empleados-boot/src/main/resources/application.properties
+++ b/empleados-boot/src/main/resources/application.properties
@@ -4,9 +4,9 @@
 #spring.jpa.hibernate.ddl-auto=update
 #spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
-#spring.data.mongodb.host=localhost
-#spring.data.mongodb.port=27017
-spring.data.mongodb.uri=mongodb+srv://localhost:27017
+spring.data.mongodb.host=localhost
+spring.data.mongodb.port=27017
+spring.data.mongodb.uri=mongodb://localhost:27017
 spring.data.mongodb.database=supuesto_empleado
 
 spring.main.allow-circular-references=true
