area empleado preparada para base de datos en docker

--- a/empleados-boot/src/main/resources/application.properties
+++ b/empleados-boot/src/main/resources/application.properties
@@ -5,8 +5,10 @@
 #spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
 spring.data.mongodb.host=localhost
-spring.data.mongodb.port=27017
-spring.data.mongodb.uri=mongodb://localhost:27017
+#spring.data.mongodb.port=27017
+#spring.data.mongodb.uri=mongodb://localhost:27017
+spring.data.mongodb.port=27717
+spring.data.mongodb.uri=mongodb://localhost:27717
 spring.data.mongodb.database=supuesto_empleado
 
 spring.main.allow-circular-references=true
