--- a/empleados-boot/src/main/resources/application.properties
+++ b/empleados-boot/src/main/resources/application.properties
@@ -4,11 +4,13 @@
 #spring.jpa.hibernate.ddl-auto=update
 #spring.mvc.pathmatch.matching-strategy=ant-path-matcher
 
-spring.data.mongodb.host=localhost
+spring.data.mongodb.host=mongodb
 #spring.data.mongodb.port=27017
 #spring.data.mongodb.uri=mongodb://localhost:27017
-spring.data.mongodb.port=27717
-spring.data.mongodb.uri=mongodb://localhost:27717
+spring.data.mongodb.port=27017
+spring.data.mongodb.uri=mongodb://mongo-db:27017
 spring.data.mongodb.database=supuesto_empleado
 
 spring.main.allow-circular-references=true
+
+server.port=8083
